# buff-llm

./: CLAUDE.md  Dockerfile  README.md  cost.py  db.py  demo.py  inference.py  llm_agent.py  openenv.yaml  pyproject.toml  requirements.txt  scenarios.py  webapp.py
server/: app.py  env.py  faults.py  generator.py  grader.py  tools.py  world.py
static/: index.html
